fix new doc form not showing on firefox

--- a/client/main.css
+++ b/client/main.css
@@ -8,7 +8,4 @@ table .markdown p {
   margin: 0;
 }
 
-.new_document_form {
-  display: table-row;
-}
 
